chg: [pdf] ALternative PDF convert

--- a/.github/workflows/honkit.yml
+++ b/.github/workflows/honkit.yml
@@ -66,3 +66,6 @@ jobs:
         - name: Run honkit epub mobi
           run: |
               npx honkit mobi
+        - name: Run pdf converter
+          run: |
+              ebook-convert book.epub book.pdf
