chg: [pdf] Try pulling latest binary calibre

--- a/.github/workflows/honkit.yml
+++ b/.github/workflows/honkit.yml
@@ -14,9 +14,10 @@ jobs:
 
         - name: Install honkit and dependencies
           run: |
-              sudo apt -y install libgif-dev calibre npm nodejs
+              sudo apt -y install libgif-dev npm nodejs wget
               sudo npm config set strict-ssl false
               sudo npm cache clean -f
+              wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
               npm install honkit
         - name: Install plugin-github
           run: |
