--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,17 @@ jobs:
         node-version: [ "18.x" ]
     steps:
     - uses: actions/checkout@v2
+    env:
+      DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    if "${{ env.DEPLOY != '' }}"
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVATE_KEY }} 
+    if "${{ env.DEPLOY != '' }}"
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: install calibre
       run: sudo apt-get update && sudo apt -y install calibre
@@ -32,6 +43,15 @@ jobs:
         npx -y honkit pdf
         npx -y honkit epub
         npx -y honkit mobi
+    if "${{ env.DEPLOY != '' }}"
+    - name: Deploy with rsync
+      run: |
+        mv book.pdf _book
+        mv book.epub _book
+        mv book.mobi _book
+        chmod +r _book/book.pdf _book/book.epub _book/book.mobi
+        cd _book
+        rsync -r --delete . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/doc.openxeco.org/
 
     # prepare release
     - name: Get repository name
