--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
     env:
       DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    if "${{ env.DEPLOY != '' }}"
+    if: env.DEPLOY != ''
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }} 
-    if "${{ env.DEPLOY != '' }}"
+    if: env.DEPLOY != ''
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
@@ -43,7 +43,7 @@ jobs:
         npx -y honkit pdf
         npx -y honkit epub
         npx -y honkit mobi
-    if "${{ env.DEPLOY != '' }}"
+    if: env.DEPLOY != ''
     - name: Deploy with rsync
       run: |
         mv book.pdf _book
