--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install SSH Key
+      env:
+        DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
+      if: env.DEPLOY != ''
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }} 
-      env:
-        DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Adding Known Hosts
       if: env.DEPLOY != ''
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
