--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }} 
         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
     - name: Adding Known Hosts
+      env:
+        DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
       if: env.DEPLOY != ''
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
@@ -45,6 +47,8 @@ jobs:
         npx -y honkit epub
         npx -y honkit mobi
     - name: Deploy with rsync
+      env:
+        DEPLOY: ${{ secrets.SSH_PRIVATE_KEY }}
       if: env.DEPLOY != ''
       run: |
         mv book.pdf _book
